--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- <link rel="icon" href="favicon.jpg" /> -->
+    <link rel="icon" href="favicon.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Shyam's Portfolio website" />
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'none'; font-src 'self' https://fonts.gstatic.com;"> -->
